note overflow fix

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -451,6 +451,7 @@
 		min-width: 230px;
 		text-align: left;
 		margin-left: 240px;
+		margin-top: auto;
 	}
 	top: 100%;
 	position: absolute;
